# bock

./: .bumpversion.cfg  .editorconfig  .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  NOTES.md  README.md  VERSION  bock-local  bootstrap.go  build  constants.go  core.py  database.go  deploy.sh  go.mod  go.sum  helpers.go  logger.py  main.go  pyproject.toml  renderers.go  requirements.txt  server.py  setup.cfg  setup.py  types.go  walkers.go  watcher.py  writers.go
.circleci/: config.yml  release
.scripts/: Dockerfile  build  build-api  build-docker  build-linux.sh  build-ui  build.sh  bump  common  deploy-docker  deploy-wheel
bock/: __init__.py  api.py  cli.py  constants.py  factory.py  helpers.py  lib.py  logger.py  repository.py  search.py
bock-ui/: .editorconfig  .prettierrc  package-lock.json  package.json  webpack.config.js
bock-ui/src/: Bock.test.tsx  Bock.tsx  code-highlight.scss  index.tsx
bock-ui/src/components/: Footer.tsx  Header.tsx  index.ts
bock-ui/src/contrib/: code-highlight.css  ionicons.min.css  pymdown-header-anchors.css  reset.css
bock-ui/src/services/: BockService.d.ts  BockService.ts
bock-ui/src/styles/: article.sass  compare.sass  fonts.sass  raw_article.sass  responsive.sass  revisions.sass
bock/api/: __init__.py  article.py  articles.py  cli.py  files.py  helpers.py  images.py  refresh.py  routes.py  search.py  server.py
bock/api/helpers/: articles.py  misc.py  paths.py  repository.py  search.py
bock/lib/: __init__.py  core.py
bock/static/: README.md  cli.py
bock/ui/: .eslintrc.json  README.md  __init__.py  bower.json  craco.config.js  gulpfile.js  package-lock.json  package.json  webpack.config.js
bock/ui/cached_dist/: Bock.css  Bock.js  Wiki.css  Wiki.js  index.html  logo.acorn  manifest.json
bock/ui/cached_dist/fonts/: 43DF2E01-2014-4E90-8569-9FE01701B376-300.eot  43DF2E01-2014-4E90-8569-9FE01701B376-900.eot  EC2EE2AE-31E4-43C8-892D-8650448F8AA9-BoldItalic.eot  EC2EE2AE-31E4-43C8-892D-8650448F8AA9-SemiboldItalic.eot
bock/ui/public/: index.html  logo.acorn
bock/ui/src/: App.css  App.tsx  Bock.config.js  Bock.controllers.js  Bock.directives.js  Bock.filters.js  Bock.html  Bock.jade  Bock.js  Bock.module.js  Bock.pug  Bock.routes.js  Bock.run.js  Bock.services.js  Router.tsx  Routes.tsx  Wiki.config.js  Wiki.controllers.js  Wiki.directives.js  Wiki.filters.js  Wiki.jade  Wiki.module.js  Wiki.routes.js  Wiki.run.js  Wiki.services.js  constants.ts  helpers.ts  index.tsx  types.ts  webpack.config.js
bock/ui/src/components/: Article.css  Article.tsx  CodeHighlight.css  Container.tsx  Folder.css  Folder.tsx  Footer.css  Footer.tsx  Hierarchy.tsx  Loading.tsx  Message.css  Message.tsx  Nav.css  Nav.tsx  (+6 more)
bock/watch/: cli.py
template/: archive.html  archive.njk  article-raw.html  article-raw.njk  article.html  article.njk  base.njk  folder.html  folder.njk  hierarchy.njk  index.njk  not-found.html  not-found.njk  random.njk  revision-list.html  revision-list.njk  revision-raw.html  revision-raw.njk  revision.html  revision.njk
template/css/: highlight.css  styles.css
template/js/: nunjucks.min.js  search.js
tests/: test_bock.py
views/: index.tpl
(+78 files in other folders)
