[tool.poetry]
name = "bock"
version = "2.1.0"
description = "A Markdown-based personal wiki in Python and React"
authors = ["Nikhil Anand <mail@nikhil.io>"]
license = "MIT"
readme = "README.md"
homepage = "http://wiki.nikhil.io"
repository = "https://github.com/afreeorange/bock"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7"
]
keywords = [
    "wiki",
    "markdown",
    "flask",
    "react"
]
include = [
    "bock/ui/cached_dist/**/*"
]
exclude = [
    "bock/ui/README.md"
]

[tool.poetry.scripts]
poetry = "bock=bock.cli:start"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
gunicorn = "^20.0"
arrow = "^0.15.4"
pyyaml = "^5.2"
tornado = "^6.0"
watchdog = "^0.9.0"
gitpython = "^3.0"
whoosh = "^2.7"
click = "^7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
